--- a/about.html
+++ b/about.html
@@ -8,7 +8,7 @@
 </head>
 <body class="about-page">
 <header> <h1>IBK FUTVERSE</h1> <nav>
-<a href="IBk Futverse.html">Home</a>
+<a href="index.html">Home</a>
 <a href="boots.html">Boots</a>
 <a href="size.html">Size Chart</a>
 <a href="register.html">Register</a>
@@ -24,4 +24,5 @@ IBK Futverse represents my love for football and creativity combined with techno
 </section>
 <font color="#ffffff"><footer>© 2025 IBK Futverse</footer></font>
 </body>
+
 </html>
