--- a/boots.html
+++ b/boots.html
@@ -8,7 +8,7 @@
 </head>
 <body class="boots-page">
 <header> <h1>IBK FUTVERSE</h1> <nav>
-<a href="IBk Futverse.html">Home</a>
+<a href="index.html">Home</a>
 <a href="about.html">About</a>
 <a href="size.html">Size Chart</a>
 <a href="register.html">Register</a>
@@ -40,4 +40,5 @@
 </section>
 <footer><font color="#ffffff">© 2025 IBK Futverse</footer></body></font>
 </body>
+
 </html>
