--- a/register.html
+++ b/register.html
@@ -13,7 +13,7 @@
 <header>
   <h1>IBK FUTVERSE</h1>
   <nav>
-  <a href="IBk Futverse.html">Home</a>
+  <a href="index.html">Home</a>
   <a href="about.html">About</a>
     <a href="boots.html">Boots</a>
     <a href="size.html">Size Chart</a>
@@ -44,4 +44,5 @@
 
 <script src="script.js"></script>
 </body>
+
 </html>
