--- a/size.html
+++ b/size.html
@@ -8,7 +8,7 @@
 </head>
 <body class="size-page">
 <header> <h1>IBK FUTVERSE</h1> <nav>
-<a href="IBk Futverse.html">Home</a>
+<a href="index.html">Home</a>
 <a href="about.html">About</a>
 <a href="boots.html">Boots</a>
 <a href="register.html">Register</a>
@@ -27,4 +27,5 @@
 </section>
 <font color="#ffffff"><footer>© 2025 IBK Futverse</footer></font>
 </body>
+
 </html>
